@@ -259,9 +259,11 @@ public class UsuarioServiceImpl implements UsuarioService {
     }
 
     @Override
-    public List<UsuarioResponseDTO> findByAll() {
-        return repository.listAll().stream()
-                .map(e -> UsuarioResponseDTO.valueOf(e)).toList();
+    public List<UsuarioResponseDTO> getAll(int page, int pageSize) {
+        List<Usuario> usuarios = repository.findAll().page(page, pageSize).list();
+
+        return usuarios.stream()
+                .map(e -> UsuarioResponseDTO.valueOf(e)).collect(Collectors.toList());
     }
 
     @Override
@@ -289,6 +291,11 @@ public class UsuarioServiceImpl implements UsuarioService {
             throw new ValidationException("login", "Login inválido");
 
         return UsuarioResponseDTO.valueOf(usuario);
+    }
+
+    @Override
+    public long count() {
+        return repository.count();
     }
 
 }
